--- a/frontend.config.example.json
+++ b/frontend.config.example.json
@@ -5,9 +5,9 @@
   },
   "livestream": {
     "defaultStreamUrl": "",
-    "fallbackStreamUrl": "https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8",
     "autoPlay": true,
-    "enableHLS": true
+    "enableHLS": true,
+    "fallbackBackgroundImage": "/bg.png"
   },
   "ui": {
     "hideLoadingAfterInit": true,
